# HW

./: Dockerfile  docker-compose-ya.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  school.py  test_api.py  zz.py
htmll/: html.html  styles.css
routers/: child.py  classroom.py  lesson.py  teacher.py
