[tool.poetry]
name = "bd"
version = "0.1.0"
description = ""
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
python=">=3.12"
SQLAlchemy = "*"
pydantic = "*"
pytest = "*"
httpx = "*"
fastapi = "*"
psycopg2-binary = "*"
uvicorn = "*"
jinja2 = "*"
